--- a/content/posts/2024/05/204-05-02-leica-cl.zh.md
+++ b/content/posts/2024/05/204-05-02-leica-cl.zh.md
@@ -12,8 +12,7 @@ tags:
 - zeiss
 - chinese
 slug: "leica cl review"
-featured_image: 2024/05/02/??.jpg
-draft: true
+featured_image: 2024/05/02/compare-1.JPG
 ---
 
 什么徕卡，只配给富士提鞋当个平替罢了（狗头）。
@@ -28,13 +27,31 @@ draft: true
 1. 第一台，当属最接近VI的替代品，上一代神机：X100V。V和VI造型基本一模一样，功能上最大的不同是V比VI少了传感器防抖和4000W高像素。但其实作为随身便携机，没有这两项完全够用。
 2. 第二台，是X Typ113的最终进化形态，也是徕卡APSC产品线最后的波纹：徕卡CL。作为L卡口的可换镜头半画幅无反相机，CL最大的玩点便是支持转接我手头一大堆旁轴和单反镜头。
 
+{{< img src="/images/2024/05/02/compare-1.JPG" title="徕卡CL与富士X100V，一黑一白" caption="👆" >}}
+{{< img src="/images/2024/05/02/compare-2.JPG" title="徕卡CL与富士X100V，大小相似" caption="👆" >}}
+
+
 # 机身
 
-从机身造型来看，CL想必借鉴了徕卡螺口机（比如Leica iiif）的设计风格：机身修长而简洁，机顶的按钮拨盘和取景器却故意展露出复杂的轮廓线（尤其是取景器乍看很生硬的凸起形状），配合优异的做工和触感，有一种来自未来的复古感，喜欢这款设计的人会相当喜欢，对不上电波的人第一眼就摇摇头直接走开。相比之下，富士X100V的线条简洁明快，应该没人会觉得难看。最新的X100VI直接沿用相同造型啥也没变。确实没必要，够好看了。
+从机身造型来看，CL想必借鉴了徕卡螺口机（比如Leica iiif）的设计风格：机身修长而简洁，机顶的按钮拨盘和取景器却故意展露出复杂的轮廓线（尤其是取景器乍看很生硬的凸起形状），配合优异的做工和触感，有一种来自未来的复古感，喜欢这款设计的人会相当喜欢，对不上电波的人第一眼就摇摇头直接走开。
+
+{{< img src="/images/2024/05/02/cl-1.JPG" title="徕卡CL" caption="👆很适合配小镜头" >}}
+{{< img src="/images/2024/05/02/cl-2.JPG" title="徕卡CL" caption="👆跟禄来40mm 2.8 hft很搭" >}}
+{{< img src="/images/2024/05/02/cl-6.JPG" title="徕卡CL" caption="👆常挂一枚vm 40 1.4" >}}
+
+相比之下，富士X100V的线条简洁明快，应该没人会觉得难看。最新的X100VI直接沿用相同造型啥也没变。确实没必要，够好看了。
+
+{{< img src="/images/2024/05/02/fuji_x100v_1.JPG" title="富士X100V" caption="👆经典造型" >}}
+{{< img src="/images/2024/05/02/fuji_x100v_2.JPG" title="富士X100V" caption="👆经典造型" >}}
 
 手感做工层面，只要同时摸过两台相机，结论就很简单，CL比X100V好。不是说X100V不好，但CL的按键拨盘触感紧致，阻尼和反馈恰到好处，真是没有对比就没有伤害。徕卡能把自己当奢侈品卖，对于“高级感”体验这块还是下了不少真功夫的。
 
+{{< img src="/images/2024/05/02/cl-3.JPG" title="徕卡CL" caption="👆按键反馈很到位" >}}
+{{< img src="/images/2024/05/02/cl-4.JPG" title="徕卡CL" caption="👆机身皮质很舒服" >}}
+
 至于镜头，不得不感慨X100V作为一体机，镜头真的做得很小很薄，第五代改进了近摄素质也足够应付日常的拍摄记录需求。对比之下，给CL挂上非常小巧复古的VM Nokton 40mm f1.4也仅仅和加了遮光罩的X100V一样大，想再小点只能挂那种超薄的大光圈薯片镜头了。不过牺牲体积换来的可玩性，让CL可以随时根据拍摄需求装上新镜头，出片风格更加多样。
+
+{{< img src="/images/2024/05/02/cl-5.JPG" title="徕卡CL" caption="👆搭配zm 35 1.4就头重脚轻了，不过画质相当好" >}}
 
 # 体验
 
@@ -42,30 +59,74 @@ draft: true
 
 与之相比，徕卡CL的快门果断迅速，时滞几乎不可感知，只要熟练掌握手动对焦就能指哪打哪，扫街抓拍的体验顺畅自如。
 
-
-除了快门，还有一个影响体验的差异，是取景器。X100V的光电混合取景器很好玩，不过我90%情况下也都是用的电子取景器。相比之下，CL只有电子取景器，但是显示效果其实比X100V好很多，手动对焦时的体验很棒，峰值看得很清晰放大对焦反应也很迅速。
-
+除了快门，还有一个影响体验的差异是取景器。X100V的光电混合取景器很好玩，不过我90%情况下都是用的电子取景器然后自动对焦。相比之下，CL只有电子取景器，但是显示效果比X100V的电子取景器好很多，手动对焦时的体验很棒，峰值看得很清晰放大对焦反应也很迅速。
 
 # 样片
 
-先来富士X100V的样片。
+## 富士X100V
+
+先来富士X100V的样片，都是直出缩图，以CC滤镜为主。
+
+{{< img src="/images/2024/05/02/sample/fuji_x100v-3192.JPG" title="富士X100V" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/fuji_x100v-3212.JPG" title="富士X100V" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/fuji_x100v-3299.JPG" title="富士X100V" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/fuji_x100v-3361.JPG" title="富士X100V" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/fuji_x100v-3372.JPG" title="富士X100V" caption="👆直出样片" >}}
+
+下面是Lightroom里用富士的RAW文件出片，轻微拉了下曲线。
+
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3419.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3435.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3441.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3453.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3455.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3458.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3459.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3467.jpg" title="富士X100V" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/fujifilm_x100v-3470.jpg" title="富士X100V" caption="👆RAW样片" >}}
+
+## 徕卡CL
+
+再来CL的样片。日常配的镜头是VM 40mm 1.4。下面都是直出JPG缩图30%的样子。
+
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_1.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_2.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_3.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_4.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_5.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_6.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_7.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_8.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_9.JPG" title="徕卡CL" caption="👆直出样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_vm_40_14_10.JPG" title="徕卡CL" caption="👆直出样片" >}}
+
+也为了好玩挂上过梅耶meyer lydith 30mm f3.5拍了几张。
+
+{{< img src="/images/2024/05/02/sample/leica_cl_meyer_lydith_30-1000209.jpg" title="徕卡CL" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_meyer_lydith_30-1000216.jpg" title="徕卡CL" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_cl_meyer_lydith_30-1000222.jpg" title="徕卡CL" caption="👆RAW样片" >}}
+
+目前又下单了一枚ZM 25 2.8，在来的路上了，之后有样张再补上。
+
+## 客串嘉宾M9
+
+顺带一提，这次出门同时还把M9带上了，挂的镜头是Rollei 40mm f2.8 hft。禄莱这枚小巧的松纳头味道相当好，顺手发几张样片在这里。
+
+{{< img src="/images/2024/05/02/m9-2.JPG" title="徕卡M9" caption="👆银机银镜真的好看" >}}
+
+{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009493.jpg" title="徕卡M9" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009505.jpg" title="徕卡M9" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009512.jpg" title="徕卡M9" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009523.jpg" title="徕卡M9" caption="👆RAW样片" >}}
+{{< img src="/images/2024/05/02/sample/leica_m9_rollei_40_hft-1009532.jpg" title="徕卡M9" caption="👆RAW样片" >}}
 
 
-再来CL的样片。日常配的镜头是VM 40mm 1.4。
-
-
-也挂上梅耶meyer lydith 30mm f3.5拍了几张。
-
-
-目前已下单ZM 25 2.8，在来的路上了，之后有样张再补上。
-
-
-这次出门同时还把M9带上了，挂的镜头是rollei 40 2.8 hft。禄莱这枚小巧的松纳头味道相当好，顺手发几张样片在这里。
-
-# 后续
+# 后话
 
 由于不太理想的体验，这趟扫街拍完回家我就顺手把X100V挂在小红书上了。没想到即使不是最新代的X100VI，流通率依然高得离谱，刚发布两个小时就被本地小姐姐收走了，是我出手最快的器材，简直比徕卡镜头更硬通货。平心而论，X100V虽然不符合我拿来扫街的需求，但日常使用确实比转接M镜头手动对焦的CL更方便，很符合小姐姐带出门和好姐妹喝下午茶时，人像摆拍和静物特写的需求。机内风格化的胶片模拟很适合网络分享，第一眼相当讨喜，拿来发小红书或者朋友圈完全不在话下。
 
 相比之下，CL出片风格倒是秉承了徕卡一贯的色彩倾向，第一眼并不会觉得惊艳，但放大对比确实没有富士XTrans传感器的那种祖传的涂抹感，属于细腻耐看的风格。直出JPG可以选的滤镜模式并不多，彩色的三款滤镜并不算出彩，我最喜欢的是黑白的两个模式，影调丰富而细腻，所以现在默认选高对比黑白，同时留一份DNG回家自己后期彩色。
 
 看网上讨论如此热烈，我本来是对X100V抱更大期待的，但没想到最后留下的是CL这台无人问津也已停产的小众机型，看来注定追不上潮流，当不了富家子弟，只能在家默默玩下西德产的富士平替了。
+
+{{< img src="/images/2024/05/02/Leica_gears.JPG" title="徕卡CL与富士X100V" caption="👆西德产的富士平替" >}}
