--- a/content/posts/2024/05/204-05-02-leica-cl.zh.md
+++ b/content/posts/2024/05/204-05-02-leica-cl.zh.md
@@ -129,4 +129,4 @@ featured_image: 2024/05/02/compare-1.JPG
 
 看网上讨论如此热烈，我本来是对X100V抱更大期待的，但没想到最后留下的是CL这台无人问津也已停产的小众机型，看来注定追不上潮流，当不了富家子弟，只能在家默默玩下西德产的富士平替了。
 
-{{< img src="/images/2024/05/02/Leica_gears.JPG" title="徕卡CL与富士X100V" caption="👆西德产的富士平替" >}}
+{{< img src="/images/2024/05/02/Leica_gears.JPG" title="过时的器材" caption="👆西德产的富士平替" >}}
