--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -9,7 +9,9 @@ tags:
 - Iceland
 - summer
 slug: "2024 06 16 Iceland travel"
-featured_image: 2024/06/16/selfie/2024_06_08-1.JPG
+autoThumbnailImage: true
+thumbnailImagePosition: right
+featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 ---
 
 冰岛绝美，值得再来！
@@ -27,125 +29,125 @@ featured_image: 2024/06/16/selfie/2024_06_08-1.JPG
 
 ## 6/7
 
-{{< img src="/images/2024/06/16/2024_06_07_first_fall.JPG" title="第一个瀑布:Seljalandsfoss" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_07-1.JPG" title="风很大，头发直接吹乱" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07_first_fall.JPG" title="第一个瀑布:Seljalandsfoss" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-1.JPG" title="风很大，头发直接吹乱" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_07-3.JPG" title="Katla冰洞" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_07-4.JPG" title="冰洞对面就是拍星球大战开场的一座三角形山峰" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_07_glacier.JPG" title="Katla冰川融化形成拱桥" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-3.JPG" title="Katla冰洞" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-4.JPG" title="冰洞对面就是拍星球大战开场的一座三角形山峰" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07_glacier.JPG" title="Katla冰川融化形成拱桥" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_07-2.JPG" title="傍晚还没调过来时差，索性爬到vik黑沙滩的岩壁顶" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_07-2.JPG" title="傍晚还没调过来时差，索性爬到vik黑沙滩的岩壁顶" caption="" >}}
 
 
 ## 6/8
 
-{{< img src="/images/2024/06/16/selfie/2024_06_08-1.JPG" title="Svínafellsjökull冰川" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-1.JPG" title="Svínafellsjökull冰川" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_08-2_1.JPG" title="Jökulsárlón冰川湖" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_08-2.JPG" title="Jökulsárlón冰川湖" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-2_1.JPG" title="Jökulsárlón冰川湖" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-2.JPG" title="Jökulsárlón冰川湖" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_08-3.JPG" title="夏天的冰岛路边长满了蓝色鲁冰花田，很漂亮" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_08-3.JPG" title="夏天的冰岛路边长满了蓝色鲁冰花田，很漂亮" caption="" >}}
 
 
 ## 6/9
 
-{{< img src="/images/2024/06/16/selfie/2024_06_09-3.JPG" title="Jökulsárlón冰川湖边到处是搁浅的冰块" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_09-4.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-3.JPG" title="Jökulsárlón冰川湖边到处是搁浅的冰块" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-4.JPG" title="" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_09_ice.JPG" title="Jökulsárlón旁的钻石沙滩上有大大小小搁浅的冰川残块，上百年前的冰剥落下来像水晶" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_ice.JPG" title="Jökulsárlón旁的钻石沙滩上有大大小小搁浅的冰川残块，上百年前的冰剥落下来像水晶" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_09_iceberg_1.JPG" title="坐船近距离看冰川" caption="由于全球变暖，每年冰川都会后退几十/几百米" >}}
-{{< img src="/images/2024/06/16/2024_06_09_iceberg_2.JPG" title="坐船近距离看冰川" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_09_iceberg_3.JPG" title="坐船近距离看冰川" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_09_iceberg_boat.JPG" title="船上有美军标识，是水陆两栖型的，出水直接开上岸" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_1.JPG" title="坐船近距离看冰川" caption="由于全球变暖，每年冰川都会后退几十/几百米" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_2.JPG" title="坐船近距离看冰川" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_3.JPG" title="坐船近距离看冰川" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_boat.JPG" title="船上有美军标识，是水陆两栖型的，出水直接开上岸" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_09-1.JPG" title="维京人第一次登岛的小镇" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_09-2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-1.JPG" title="维京人第一次登岛的小镇" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-2.JPG" title="" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_09_hourse.JPG" title="冰岛的马发型都很帅，据说这里的马血统都很纯，马匹只准出口不准进口" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_hourse.JPG" title="冰岛的马发型都很帅，据说这里的马血统都很纯，马匹只准出口不准进口" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_09-5.JPG" title="冰岛的猫猫都不怕人，随便撸" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09-5.JPG" title="冰岛的猫猫都不怕人，随便撸" caption="" >}}
 
 
 ## 6/10
 
-{{< img src="/images/2024/06/16/2024_06_10_socks.JPG" title="冰岛甚少见烘干机，都是挂出来太阳自然烘干" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_10_socks.JPG" title="冰岛甚少见烘干机，都是挂出来太阳自然烘干" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_10-1.JPG" title="和路边同色的小屋合影" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_10-1.JPG" title="和路边同色的小屋合影" caption="" >}}
 
 
 ## 6/11
 
-{{< img src="/images/2024/06/16/selfie/2024_06_11-1.JPG" title="Hengifoss景点需要登山" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_11-3.JPG" title="Hengifoss的瀑布周围有红色岩层" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_11-2.JPG" title="太阳很烈,爬完山回家直接黑了两个色号" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-1.JPG" title="Hengifoss景点需要登山" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-3.JPG" title="Hengifoss的瀑布周围有红色岩层" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-2.JPG" title="太阳很烈,爬完山回家直接黑了两个色号" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_11_boat.JPG" title="废弃的船（WWII US Navy LCM ship wreck），二战期间搁浅" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_11-4.JPG" title="废土风很出片" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_11-5.JPG" title="Mjóifjörður公路边有一座很好看的山峰" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_boat.JPG" title="废弃的船（WWII US Navy LCM ship wreck），二战期间搁浅" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-4.JPG" title="废土风很出片" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11-5.JPG" title="Mjóifjörður公路边有一座很好看的山峰" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_11_car.JPG" title="给blue rental租的混动SUV来一张靓照" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_car.JPG" title="给blue rental租的混动SUV来一张靓照" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_11_door.JPG" title="这次环岛游最喜欢的海边小镇景区：Bakkagerði" caption="整个小镇都很干净，颜色丰富，搭配赏心悦目" >}}
-{{< img src="/images/2024/06/16/2024_06_11_door2.JPG" title="这边的门我能拍一天" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_door3.JPG" title="这几张静物都是CL配ZM35 1.4拍的，颜色很舒服。" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_stop_sign.JPG" title="" caption="路边随处可见的牌子都很养眼，饱和度恰到好处" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door.JPG" title="这次环岛游最喜欢的海边小镇景区：Bakkagerði" caption="整个小镇都很干净，颜色丰富，搭配赏心悦目" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door2.JPG" title="这边的门我能拍一天" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_door3.JPG" title="这几张静物都是CL配ZM35 1.4拍的，颜色很舒服。" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_stop_sign.JPG" title="" caption="路边随处可见的牌子都很养眼，饱和度恰到好处" >}}
 
-{{< img src="/images/2024/06/16/2024_06_11_ship.JPG" title="岸上的船也都是糖果色" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_ship2.JPG" title="" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_float.JPG" title="" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_port.JPG" title="" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_port2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship.JPG" title="岸上的船也都是糖果色" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_ship2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_float.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_port2.JPG" title="" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_11_puffin_1.JPG" title="Hafnarhólmi小岛上海鹦每年都会飞来筑巢繁殖。雄鸟和雌鸟一旦认准彼此就会终生相伴，每年飞回第一次相遇的地方，找到彼此，然后共同孵化小鸟" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_puffin_2.JPG" title="海鹦的嘴在夏天会从灰色变成橙色，方便彼此识别身份" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_puffin_3.JPG" title="海鹦看着憨憨的，但它们其实可以憋气两分钟潜水60米深，海陆空全制霸" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_puffin_4.JPG" title="如果没找到往年的伴侣，海鹦也会找其他异性繁衍，不过一旦原配隔段时间又回来了，就会回归原配" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_11_puffin_5.JPG" title="一般一对海鹦都是交替外出捕鱼，留一只在巢穴照顾小鸟" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_1.JPG" title="Hafnarhólmi小岛上海鹦每年都会飞来筑巢繁殖。雄鸟和雌鸟一旦认准彼此就会终生相伴，每年飞回第一次相遇的地方，找到彼此，然后共同孵化小鸟" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_2.JPG" title="海鹦的嘴在夏天会从灰色变成橙色，方便彼此识别身份" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_3.JPG" title="海鹦看着憨憨的，但它们其实可以憋气两分钟潜水60米深，海陆空全制霸" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_4.JPG" title="如果没找到往年的伴侣，海鹦也会找其他异性繁衍，不过一旦原配隔段时间又回来了，就会回归原配" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_5.JPG" title="一般一对海鹦都是交替外出捕鱼，留一只在巢穴照顾小鸟" caption="" >}}
 
 
 ## 6/12
 
-{{< img src="/images/2024/06/16/2024_06_12_wall.JPG" title="继续拍Bakkagerði的糖果色建筑" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_12_wall2.JPG" title="我们住在Blabjorg Guesthouse，餐厅很棒，还能泡澡" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_12_wall3.JPG" title="颜色层次感很强" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall.JPG" title="继续拍Bakkagerði的糖果色建筑" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall2.JPG" title="我们住在Blabjorg Guesthouse，餐厅很棒，还能泡澡" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_wall3.JPG" title="颜色层次感很强" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_12-1.JPG" title="离开Bakkagerði前往Stuðlagil Canyon" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_12_red_car.JPG" title="Canyon停车场里的红色复古小车，这边经常能见到这类老古董" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12-1.JPG" title="离开Bakkagerði前往Stuðlagil Canyon" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_red_car.JPG" title="Canyon停车场里的红色复古小车，这边经常能见到这类老古董" caption="" >}}
 
-{{< img src="/images/2024/06/16/selfie/2024_06_12-2.JPG" title="沿途经过Dettifoss瀑布，周围都是新下的雪" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12-2.JPG" title="沿途经过Dettifoss瀑布，周围都是新下的雪" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_12_flower.JPG" title="抵达Húsavík观鲸小镇" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_12_anderson.JPG" title="Geosea viewpoint有一栋满足强迫症的楼，很有Wes Anderson风格，可惜去的时候被一辆违规停靠的车破坏了美感" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_12_jump.JPG" title="这边的公园有很多蹦床，总有小朋友在上面跳" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_12_pool.JPG" title="海景无边温泉" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_flower.JPG" title="抵达Húsavík观鲸小镇" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_anderson.JPG" title="Geosea viewpoint有一栋满足强迫症的楼，很有Wes Anderson风格，可惜去的时候被一辆违规停靠的车破坏了美感" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_jump.JPG" title="这边的公园有很多蹦床，总有小朋友在上面跳" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_12_pool.JPG" title="海景无边温泉" caption="" >}}
 
 
 ## 6/13
-{{< img src="/images/2024/06/16/2024_06_13_whale_watch.JPG" title="一早起来坐船观鲸，没有遇到鲸鱼但遇到了很多白吻海豚" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_whale_watch.JPG" title="一早起来坐船观鲸，没有遇到鲸鱼但遇到了很多白吻海豚" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_13_anderson.JPG" title="顺道又来这栋楼，破坏对称的车走了，舒服了" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_anderson.JPG" title="顺道又来这栋楼，破坏对称的车走了，舒服了" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_13_hot.JPG" title="Námafjall的蒸汽泥池，有小黄石的感觉" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_13_hot2.JPG" title="" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_hot.JPG" title="Námafjall的蒸汽泥池，有小黄石的感觉" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_hot2.JPG" title="" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_13_playground.JPG" title="Akureyri的公园" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_13_playground.JPG" title="Akureyri的公园" caption="" >}}
 
 
 ## 6/14
 
-{{< img src="/images/2024/06/16/selfie/2024_06_14-1.JPG" title="著名的草帽山" caption="" >}}
-{{< img src="/images/2024/06/16/selfie/2024_06_14-2.JPG" title="Arnarstapi Cliff Viewpoint有一座天然石桥，桥下全是海鸥的巢" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14-1.JPG" title="著名的草帽山" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14-2.JPG" title="Arnarstapi Cliff Viewpoint有一座天然石桥，桥下全是海鸥的巢" caption="" >}}
 
-{{< img src="/images/2024/06/16/2024_06_14_car.JPG" title="加油站偶遇很有个性的小车" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_14_church.JPG" title="Blönduós教堂很有型" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_14_eye_church.JPG" title="Hellissandur检查视力用的那个教堂" caption="" >}}
-{{< img src="/images/2024/06/16/2024_06_14_seal.JPG" title="Ytri Tunga沙滩上躺了一群海豹" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_car.JPG" title="加油站偶遇很有个性的小车" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_church.JPG" title="Blönduós教堂很有型" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_eye_church.JPG" title="Hellissandur检查视力用的那个教堂" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_seal.JPG" title="Ytri Tunga沙滩上躺了一群海豹" caption="" >}}
 
 
 ## 6/15
 
-{{< img src="/images/2024/06/16/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游" caption="" >}}
 
 
 # 再来
