--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -17,13 +17,18 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 冰岛绝美，值得再来！
 <!--more-->
 
-# 绝美
+# 路线
 
 冰岛的夏天太美，由于丰富的火山活动，不大的区域里汇集了各种神奇的地貌，过于反常以至经常让人有置身异星的错觉。这次六月初的10天行程，我们以逆时针方向自驾环岛一周，打卡了很多著名景点，也明白为什么那么多电影场景喜欢来冰岛进行拍摄：飞来这里取景简直就是作弊，风景这么好想拍出难看的照片都不容易，随手快门一捏就是一张封面。就是这么离谱。
+
+{{< img src="/images/2024/06/16/route.png" title="路线大致为逆时针环岛一周" >}}
 
 # 器材
 
 轻装简行，这次只带了两机（徕卡SL和徕卡CL）和两镜（蔡司ZM 25 2.8和ZM 35 1.4），覆盖绝大部分拍摄需求（一般是SL配ZM25拍广角，CL配ZM 35等效标头）。蔡司在晴天下下搭配SL出片很有味道，下面风景照都是原图直出无P，人像照都是直接传到手机上微调下颜色凸显人物主体。走之前还纠结要不要带长焦，但长焦基本只能拿来拍动物（海豚、鲸鱼、海豹、海鹦），而我最长的一枚是135mm的手动定焦头想抓拍也很困难就懒得带了。拍的到就拍，拍不到就换手机。就是这么随性(最后发现SL配ZM25基本覆盖出片率80%，尤其是人像部分)。
+
+{{< img src="/images/2024/06/16/thumbnail/gears.JPG" title="两机两镜" >}}
+
 
 # 行程
 
