--- a/content/posts/2024/05/204-05-02-leica-cl.zh.md
+++ b/content/posts/2024/05/204-05-02-leica-cl.zh.md
@@ -20,7 +20,7 @@ featured_image: 2024/05/02/compare-1.JPG
 
 # 背景
 
-最近富士X100VI发布，疯狂出圈，预约爆表，一机难求，成为了现象级的网红产品。我之前写过一篇[文章](({{< ref "/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md" >}}))，讲徕卡X Typ113可以当X100V的平替。现在新一代的X100VI都出来了，是时候来找找看X100VI的平替了。
+最近富士X100VI发布，疯狂出圈，预约爆表，一机难求，成为了现象级的网红产品。我之前写过一篇[文章]({{< ref "/posts/2023/03/2023-03-23-leica-x-typ-113.zh.md" >}})，讲徕卡X Typ113可以当X100V的平替。现在新一代的X100VI都出来了，是时候来找找看X100VI的平替了。
 
 找了两台：
 
