--- a/content/posts/2024/06/2024-06-16-iceland.zh.md
+++ b/content/posts/2024/06/2024-06-16-iceland.zh.md
@@ -25,7 +25,7 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 
 # 器材
 
-轻装简行，这次只带了两机（徕卡SL和徕卡CL）和两镜（蔡司ZM 25 2.8和ZM 35 1.4），覆盖绝大部分拍摄需求（一般是SL配ZM25拍广角，CL配ZM 35等效标头）。蔡司在晴天下下搭配SL出片很有味道，下面风景照都是原图直出无P，人像照都是直接传到手机上微调下颜色凸显人物主体。走之前还纠结要不要带长焦，但长焦基本只能拿来拍动物（海豚、鲸鱼、海豹、海鹦），而我最长的一枚是135mm的手动定焦头想抓拍也很困难就懒得带了。拍的到就拍，拍不到就换手机。就是这么随性(最后发现SL配ZM25基本覆盖出片率80%，尤其是人像部分)。
+轻装简行，这次只带了两机（徕卡SL和徕卡CL）和两镜（蔡司ZM 25 2.8和ZM 35 1.4），覆盖绝大部分拍摄需求（一般是SL配ZM25拍广角，CL配ZM 35等效标头）。蔡司在晴天下搭配SL出片很有味道，下面风景照都是原图直出无P，人像照都是直接传到手机上微调下颜色凸显人物主体。走之前还纠结要不要带长焦，但长焦基本只能拿来拍动物（海豚、鲸鱼、海豹、海鹦），而我最长的一枚是[135mm的手动定焦头]({{< ref "about.md" >}})想抓拍也很困难就懒得带了。拍得到就拍，拍不到就换手机对付下(最后发现SL配ZM25基本覆盖80%出片率，尤其是人像部分)。就是这么随性。
 
 {{< img src="/images/2024/06/16/thumbnail/gears.JPG" title="两机两镜" >}}
 
@@ -61,7 +61,7 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_ice.JPG" title="Jökulsárlón旁的钻石沙滩上有大大小小搁浅的冰川残块，上百年前的冰剥落下来像水晶" caption="" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_1.JPG" title="坐船近距离看冰川" caption="由于全球变暖，每年冰川都会后退几十/几百米" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_1.JPG" title="坐船近距离看冰川" caption="由于全球变暖，每年冰川都会后退上百米" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_2.JPG" title="坐船近距离看冰川" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_3.JPG" title="坐船近距离看冰川" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_09_iceberg_boat.JPG" title="船上有美军标识，是水陆两栖型的，出水直接开上岸" caption="" >}}
@@ -107,8 +107,8 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_1.JPG" title="Hafnarhólmi小岛上海鹦每年都会飞来筑巢繁殖。雄鸟和雌鸟一旦认准彼此就会终生相伴，每年飞回第一次相遇的地方，找到彼此，然后共同孵化小鸟" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_2.JPG" title="海鹦的嘴在夏天会从灰色变成橙色，方便彼此识别身份" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_3.JPG" title="海鹦看着憨憨的，但它们其实可以憋气两分钟潜水60米深，海陆空全制霸" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_4.JPG" title="如果没找到往年的伴侣，海鹦也会找其他异性繁衍，不过一旦原配隔段时间又回来了，就会回归原配" caption="" >}}
-{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_5.JPG" title="一般一对海鹦都是交替外出捕鱼，留一只在巢穴照顾小鸟" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_4.JPG" title="如果没找到往年的伴侣，海鹦也会找其他异性繁衍，不过一旦原配隔段时间又回来了，就会回归原配，非常忠诚" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_11_puffin_5.JPG" title="一对海鹦都是交替外出捕鱼，总会留一只在巢穴照顾小鸟" caption="" >}}
 
 
 ## 6/12
@@ -144,7 +144,7 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 {{< img src="/images/2024/06/16/thumbnail/2024_06_14-1.JPG" title="著名的草帽山" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_14-2.JPG" title="Arnarstapi Cliff Viewpoint有一座天然石桥，桥下全是海鸥的巢" caption="" >}}
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_14_car.JPG" title="加油站偶遇很有个性的小车" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_14_car.JPG" title="加油站偶遇很有个性的小黄车" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_14_church.JPG" title="Blönduós教堂很有型" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_14_eye_church.JPG" title="Hellissandur检查视力用的那个教堂" caption="" >}}
 {{< img src="/images/2024/06/16/thumbnail/2024_06_14_seal.JPG" title="Ytri Tunga沙滩上躺了一群海豹" caption="" >}}
@@ -152,7 +152,7 @@ featured_image: 2024/06/16/thumbnail/2024_06_08-1.JPG
 
 ## 6/15
 
-{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游" caption="" >}}
+{{< img src="/images/2024/06/16/thumbnail/2024_06_15_church.JPG" title="回到雷克雅未克，购物逛街一日游，顺带在Kaffi Loki品尝了腌鲨鱼肉。估计是餐厅改良了口味，没有传说中那么冲鼻，不过多嚼两下就能闻到强烈的氨气味" caption="" >}}
 
 
 # 再来
